<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/card_corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_small">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <TextView
            android:id="@+id/textViewSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toTopOf="@id/textViewSpeedLabel"
            app:layout_constraintEnd_toEndOf="@id/guideline_first"
            app:layout_constraintStart_toStartOf="@id/guideline_first"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_weight="1"
            tools:text="13.2" />

        <TextView
            android:id="@+id/textViewSpeedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_first"
            app:layout_constraintStart_toStartOf="@id/guideline_first"
            app:layout_constraintTop_toBottomOf="@id/textViewSpeed"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_speed"
            app:layout_constraintBottom_toTopOf="@id/textViewSpeed"
            app:layout_constraintEnd_toEndOf="@id/textViewSpeed"
            app:layout_constraintStart_toEndOf="@id/textViewSpeed"
            app:layout_constraintTop_toTopOf="@id/textViewSpeed"
            app:tint="?attr/colorOnSurface"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textViewBattery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toTopOf="@id/textViewBatteryLabel"
            app:layout_constraintEnd_toEndOf="@id/guideline_second"
            app:layout_constraintStart_toStartOf="@id/guideline_second"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="67" />

        <TextView
            android:id="@+id/textViewBatteryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battery"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_second"
            app:layout_constraintStart_toStartOf="@id/guideline_second"
            app:layout_constraintTop_toBottomOf="@id/textViewBattery"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent_symbol"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/textViewBattery"
            app:layout_constraintEnd_toEndOf="@id/textViewBattery"
            app:layout_constraintStart_toEndOf="@id/textViewBattery"
            app:layout_constraintTop_toTopOf="@id/textViewBattery" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toTopOf="@id/textViewTimeLabel"
            app:layout_constraintEnd_toEndOf="@id/guideline_third"
            app:layout_constraintStart_toStartOf="@id/guideline_third"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="23" />

        <TextView
            android:id="@+id/textViewTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_on"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_third"
            app:layout_constraintStart_toStartOf="@id/guideline_third"
            app:layout_constraintTop_toBottomOf="@id/textViewTime"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute_short"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintBottom_toTopOf="@id/textViewTime"
            app:layout_constraintEnd_toEndOf="@id/textViewTime"
            app:layout_constraintStart_toEndOf="@id/textViewTime"
            app:layout_constraintTop_toTopOf="@id/textViewTime" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>